Updated the taco recipes with an ingredients list

--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -1,2 +1,26 @@
-<h1>Taco Roundup Tuesday</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Birria Taco Tuesday</title>
+</head>
+<body>
+    <h1>Taco Roundup Tuesday</h1>
 <img src="birria_tacos.jpg" />
+<h3>Ingredients</h3>
+<p>These are the ingredients you will need to make this top-rate birria tacos recipe:</p></p>
+<ul>
+    <li><strong>Dried chile peppers: </strong>The flavorful birria starts with dried guajillo chile peppers, chile de arbol peppers, and ancho chiles. For a bit of extra heat, don't remove all the seeds.</li> 
+    <li><strong>Beef: </strong>Beef chuck roast is perfect for braising for hours. When you're done, the meat will shred incredibly easily.</li> 
+    <li><strong>Seasonings: </strong>You'll need salt, pepper, fresh garlic, whole cloves, cinnamon, cumin, thyme, marjoram, and oregano.</li> 
+    <li><strong>Olive Oil: </strong>Sear the meat in olive oil before you add the braising liquid.</li> 
+    <li><strong>Tomatoes: </strong>Grill Roma tomatoes before blending them with other ingredients to unlock extra layers of flavor.</li> 
+    <li><strong>Vinegar: </strong>Two tablespoons of white vinegar adds even more acidity to the braising liquid.</li> 
+    <li><strong>Tortillas: </strong>Use store-bought or homemade corn tortillas.</li> 
+    <li><strong>Onion & Cilantro: </strong>Finish each taco with chopped onion and fresh cilantro for a final punch of flavor and texture.</li> 
+</ul>
+</body>
+</html>
+
